--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/konservasi
-JWT_SECRET=konservasi_secret
+MONGODB_URI=mongodb+srv://Admin:Admin123@cluster0.iwabb33.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=konserva_secret
+NODE_ENV=development
